--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,5 @@ fabric.properties
 .idea/**/markdown-navigator/
 
 # End of https://www.gitignore.io/api/laravel,phpstorm
+
+web/public/config.php
